syntax = "proto3";
package common;
option go_package = "high-go-press/api/proto/common";

// 通用响应状态
message Status {
  bool success = 1;
  string message = 2;
  int32 code = 3;
}

// 通用时间戳
message Timestamp {
  int64 seconds = 1;
  int32 nanos = 2;
}

// 分页请求
message PaginationRequest {
  int32 page = 1;
  int32 size = 2;
  int32 offset = 3;
  int32 limit = 4;
}

// 分页响应
message PaginationResponse {
  int32 total = 1;
  int32 page = 2;
  int32 size = 3;
  bool has_next = 4;
} 